# ex

./: README.md
bash/: 1.sh  2.sh  3.sh  4.sh  5.sh  6.sh  lib.sh
c++/1/: main.cpp
c++/2/: main.cpp
c++/3/: main.cpp
c++/4/: random.cpp
c++/5/: main.cpp
c++/6/: main.cpp
c++/8/: main.cpp
c++/graph/: graph.cpp  graph.h
c++/macro/: predefined.cpp
c++/my_post_exam/: q1.txt  webs.txt
c++/my_post_exam/0/: question.txt
c++/my_post_exam/1/: power_set.cpp  question.txt
c++/my_post_exam/2/: .in.txt.swp  article_alignment.cpp  in.txt  question.cpp  question.txt
c++/my_post_exam/3/: big_number.cpp  question.txt
c++/my_post_exam/4/: combinations_100.cpp  question.cpp
c++/my_post_exam/5/: question.cpp
c++/my_post_exam/6/: my_printf.cpp  question.cpp
clang/1/: CMakeLists.txt  README.txt
clang/1/CppDslEx1/: CMakeLists.txt  README.txt
clang/2/: CppDslEx2.cpp  Makefile  README.txt  build_vs_released_binary.sh
clang/CppDslEx1/: CppDslEx1.cpp  README.txt  input.h
clang/ex1/: ex1.cl  input.cpp
clang/ex1/CppDslEx1/: CMakeLists.txt  CppDslEx1.cpp  CppDslEx1.h  output.cpp
clang/vectorize/: Godbolt.cpp  known_start_end.cpp  slp.cpp  unknown_start_end.cpp
cmake/1/: CMakeLists.txt  func1.cpp  main.cpp
cmake/10/: CMakeLists.txt  README.txt  main.cpp
cmake/10/lib/: CMakeLists.txt
cmake/11/: CMakeLists.txt  README.txt  main2.cpp
cmake/12/lib/: func1.cpp
cmake/13/: CMakeLists.txt  README.txt  main.cpp
cmake/13/lib/: func1.cpp  func2.cpp
cmake/14/: CMakeLists.txt  README.txt
cmake/14/lib/: CMakeLists.txt  func2.cpp
cmake/2/: CMakeLists.txt  main.cpp
cmake/2/lib/: CMakeLists.txt
cmake/3/: CMakeLists.txt  main.cpp
cmake/3/lib/: CMakeLists.txt  func1.cpp  func2.cpp
cmake/4/: .main.cpp.swp  CMakeLists.txt  main.cpp
cmake/4/lib_cpu2/: CMakeLists.txt
cmake/5/: CMakeLists.txt
cmake/5/lib_cpu1/: CMakeLists.txt
cmake/6/: CMakeLists.txt
cmake/6/sh/: CMakeLists.txt  world.sh
cmake/7/: CMakeLists.txt
cmake/8/: CMakeLists.txt
cmake/macro/: CMakeLists.txt
graphviz/: llc-s.gv  llc.gv  onnc-cache-miss.gv  onnc.gv  runtime.gv  simu.gv  sow-coprocessor.gv  sow-hetergeneous.gv  sow.gv  sw-dep.gv  sw.gv  task-break-down.gv
opencl/: Gerald-vadd.c  common.h  dsl.cpp  note  saxpy-kernel.cl  saxpy-riscv.c  saxpy-riscv.cpp  test.cl  vadd.c
opencl/matrix-dsl/: matrix-dsl.cpp  matrix-dsl.h
opencl/vector-dsl/: DslCppToCpp.cpp  Makefile  README.txt  dsl-cpp-to-cpp.sh  vector-dsl.cpp  vector-dsl.h
riscv/: resources.txt
riscv/1/: 1.cpp  ch6_1.cpp  ch8_1_1.cpp  clang-option1.txt  clarify  start.cpp
sycl/: RISCV-Dev-OpenCL.txt  Run-opencl.txt  dev-selector.cpp  external_rand.cpp  simple-sycl-app.cpp
